@@ -229,4 +229,4 @@ INSERT INTO ZENTRACK_SETTINGS (setting_id, name, value, description) VALUES (101
 INSERT INTO ZENTRACK_VARFIELD (ticket_id) SELECT id FROM ZENTRACK_TICKETS;
 
 -- Modify the version number
-UPDATE ZENTRACK_SETTINGS SET value='2.5 RC2' WHERE setting_id=74;
+UPDATE ZENTRACK_SETTINGS SET value='2.5.0' WHERE setting_id=74;
